# urlogger

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  eslint.config.ts  lefthook.yml  package.json
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
scripts/: bump.ts  init.ts  release.ts  shared.ts
src/: color.rs  lib.rs  logger.rs  main.rs  types.rs
tests/: integration_test.rs
