[package]
name = "package-name"
version = "3.0.2"
authors = [ "YONGQI <betterhyq@qq.com>" ]
edition = "2024"
description = "A template for a new Rust project"
documentation = "https://docs.rs/package-name"
readme = "README.md"
homepage = "https://github.com/un-rust/package-name"
repository = "https://github.com/un-rust/package-name"
license = "Apache-2.0"
keywords = [ ]
categories = [ "development-tools" ]
rust-version = "1.85.0"

[dependencies]
urlogger = "1.0.0"
