[package]
name = "urlogger"
version = "1.1.2"
authors = [ "YONGQI <betterhyq@qq.com>" ]
edition = "2024"
description = "Lightweight colored logger: `log(level, message)` with `RUST_LOG` filtering."
documentation = "https://docs.rs/urlogger"
readme = "README.md"
homepage = "https://github.com/un-rust/urlogger"
repository = "https://github.com/un-rust/urlogger"
license = "Apache-2.0"
keywords = [ "log", "logger", "logging", "console" ]
categories = [ "development-tools" ]
rust-version = "1.85.0"

[dependencies]
